Fix spacing around search box

--- a/css/theme.css
+++ b/css/theme.css
@@ -345,7 +345,7 @@ h1.widget-title, h3.sidetitl {
 /* Searchform */
 
 #searchform{
-	padding:20px 20px;
+	padding: 0px 20px;
 	left: 0;
     float: right;
 }
